--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,6 +16,10 @@ main:
     url: "/about/about-me/"
     weight: 40
     
+  - name: Shiny Apps (Coming Soon!)
+    url: "/shinyapps"
+    weight: 50
+    
   - name: Contact
     url: '#contact'
     weight: 70
