--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,9 +16,9 @@ main:
     url: "/about/about-me/"
     weight: 40
     
-  - name: Shiny Apps (Coming Soon!)
-    url: "/shinyapps"
-    weight: 50
+  #- name: Shiny Apps (Coming Soon!)
+    #url: "/shinyapps"
+    #weight: 50
     
   - name: Contact
     url: '#contact'
